modules/gdscript/tests/scripts/parser/errors/oninstantiated_in_non_node_class.gd
@oninstantiated var node

func test():
	pass
